fixed footer gap

--- a/style/style.css
+++ b/style/style.css
@@ -35,6 +35,7 @@ h5 {
   left:0; 
   right:0;
   margin-top:50px;
+  margin-bottom:-50px;
 }
 
 .Templates {
